<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/textviewpadding">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_above_login"
        android:contentDescription="@string/todo"
        android:paddingLeft="@dimen/spacing"
        android:paddingRight="@dimen/spacing"
        app:srcCompat="@drawable/logo_big_studio" />



    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/spacing_above_login"
        android:text="@string/login"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailLabel"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/small_spacing"
        android:autofillHints=""
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:padding="@dimen/textviewpadding"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/spacing_login"
        android:layout_marginBottom="@dimen/small_spacing"
        android:text="@string/has_o"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLabel"
        android:layout_centerInParent="true"
        android:autofillHints=""
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:padding="@dimen/textviewpadding"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20sp" />


    <CheckBox
        android:id="@+id/rememberCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/spacing_login"
        android:text="@string/zapami_taj_has_o" />



    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rememberCheckBox"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/spacing_login"
        android:text="@string/zaloguj"
        android:onClick="LoginBtn"/>

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jesteś nowy? Zarejestruj się!"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_below="@id/loginButton"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/spacing_login"/>

</RelativeLayout>