<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/textviewpadding">


    <ImageView
        android:id="@+id/logoRImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_login"
        android:contentDescription="@string/todo"
        android:paddingLeft="@dimen/spacing"
        android:paddingRight="@dimen/spacing"
        app:srcCompat="@drawable/logo_big_studio" />



    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoRImageView"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/spacing_login"
        android:text="@string/login"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailLabel"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/small_spacing"
        android:autofillHints=""
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:padding="@dimen/textviewpadding"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/spacing_login"
        android:layout_marginBottom="@dimen/small_spacing"
        android:text="@string/has_o"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLabel"
        android:layout_centerInParent="true"
        android:autofillHints=""
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:padding="@dimen/textviewpadding"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/repeatPasswordLabel"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/spacing_login"
        android:text="Powtórz Hasło"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/repeatPasswordEditText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/repeatPasswordLabel"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/small_spacing"
        android:autofillHints=""
        android:hint="Powtórz Hasło"
        android:inputType="textPassword"
        android:maxLength="50"
        android:padding="@dimen/textviewpadding"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/repeatPasswordEditText"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/spacing_login"
        android:text="Imię"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameLabel"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/small_spacing"
        android:autofillHints=""
        android:hint="Podaj swoje imię"
        android:inputType="text"
        android:maxLength="50"
        android:padding="@dimen/textviewpadding"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/surnameLabel"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEditText"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/spacing_login"
        android:text="Nazwisko"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/surnameEditText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/surnameLabel"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/small_spacing"
        android:autofillHints=""
        android:hint="Podaj swoje nazwisko"
        android:inputType="text"
        android:maxLength="50"
        android:padding="@dimen/textviewpadding"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20sp" />


    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/surnameEditText"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/spacing_login"
        android:text="Zarejestruj"
        android:onClick="registerButton"/>

    <ProgressBar
        android:id="@+id/registerProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_below="@id/registerButton"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/spacing_login"/>

</RelativeLayout>